--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/urlshortener
-SENTRY_DSN=
+DATABASE_URL=postgresql://username:password@localhost:5432/dbname
+SENTRY_DSN=your_sentry_dsn_here
 BASE_URL=http://localhost:8080
